# figma-free

./: BUGS_AND_ISSUES.md  README.md  index.html  package.json  pnpm-lock.yaml  session-ses_3dd3.md  tsconfig.node.json  vite.config.ts
.github/workflows/: publish.yml
docs/: FIXES_APPLIED.md  GEMINI.md  bugs-issues.md  potential-issues.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/network/: dns.rs  interceptor.rs  mod.rs
src-tauri/src/proxy/: config.rs  health.rs  manager.rs  mod.rs
src-tauri/src/utils/: crypto.rs  mod.rs  storage.rs
src/components/: ConnectionStatusSection.tsx  DNSConfigSection.tsx  HomeScreen.tsx  ProxyConfigSection.tsx  SettingsPanel.tsx  StatusIndicator.tsx  TitleBar.tsx  WebView.tsx  index.ts
src/components/Settings/: AboutTab.tsx  AdvancedTab.tsx  ProxyTab.tsx  index.ts
src/hooks/: useProxy.ts
src/store/: proxyStore.ts
src/types/: proxy.ts
