[package]
name = "figma-wpr"
version = "0.1.0"
description = "A Figma Desktop Wrapper with Proxy Support"
authors = ["ein"]
edition = "2021"

[lib]
name = "figma_wpr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client with proxy support
reqwest = { version = "0.12", features = ["json", "socks", "rustls-tls"], default-features = false }

# Secure credential storage
keyring = "3"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
log = "0.4"
env_logger = "0.11"

# Time utilities
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2"

# Regular expressions
regex = "1"

# Directory utilities
dirs = "5"
tauri-plugin-dialog = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

